--- a/Study/Closing the Gap Study Revisited.ipynb
+++ b/Study/Closing the Gap Study Revisited.ipynb
@@ -43,11 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryan.shuhart\\AppData\\Local\\Continuum\\Anaconda3\\envs\\ipykernel_py2\\lib\\site-packages\\IPython\\html.py:14: ShimWarning: The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Python Modules\n",
     "import pandas as pd\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -74,11 +83,10 @@
       "Starting length is 1432124 \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 867987 entries, 0 to 1432123\n",
-      "Data columns (total 44 columns):\n",
+      "Data columns (total 35 columns):\n",
       "SEQNO       867987 non-null float64\n",
       "_INCOMG     867987 non-null float64\n",
       "_IMPRACE    867987 non-null float64\n",
-      "_AGE65YR    867987 non-null float64\n",
       "_AGE_G      867987 non-null float64\n",
       "GENHLTH     867987 non-null float64\n",
       "PHYSHLTH    867981 non-null float64\n",
@@ -86,24 +94,16 @@
       "HLTHPLN1    867987 non-null float64\n",
       "PERSDOC2    867986 non-null float64\n",
       "MEDCOST     867984 non-null float64\n",
-      "VETERAN3    867407 non-null float64\n",
       "MARITAL     866953 non-null float64\n",
       "EDUCA       866406 non-null float64\n",
       "CHECKUP1    867985 non-null float64\n",
       "INCOME2     864423 non-null float64\n",
       "SEX         867987 non-null float64\n",
       "SMOKDAY2    359144 non-null float64\n",
-      "AVEDRNK2    464822 non-null float64\n",
-      "RRCLASS2    32989 non-null float64\n",
-      "RRATWRK2    24131 non-null float64\n",
-      "RRHCARE3    32917 non-null float64\n",
-      "RRPHYSM2    32889 non-null float64\n",
-      "RREMTSM2    32873 non-null float64\n",
       "EXERANY2    848814 non-null float64\n",
       "CVDINFR4    867985 non-null float64\n",
       "CVDCRHD4    867987 non-null float64\n",
       "CVDSTRK3    867987 non-null float64\n",
-      "SCNTPAID    53555 non-null float64\n",
       "ASTHMA3     867987 non-null float64\n",
       "ASTHNOW     120875 non-null float64\n",
       "CHCSCNCR    867983 non-null float64\n",
@@ -118,24 +118,24 @@
       "LASTSMK2    197171 non-null float64\n",
       "USENOW3     846261 non-null float64\n",
       "_Health     867987 non-null float64\n",
-      "Rec_Year    867987 non-null int64\n",
-      "dtypes: float64(43), int64(1)\n",
-      "memory usage: 298.0 MB\n"
+      "Rec_Year    867987 non-null int32\n",
+      "dtypes: float64(34), int32(1)\n",
+      "memory usage: 235.1 MB\n"
      ]
     }
    ],
    "source": [
     "# Ryan import\n",
-    "#brfss = pd.read_csv('.\\\\data\\\\brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
+    "brfss = pd.read_csv('.\\\\data\\\\brfss2012_2014.zip', encoding = \"ISO-8859-1\", compression='zip')\n",
     "\n",
     "# Andrew work import:\n",
     "# brfss = pd.read_csv('C:\\\\Users\\\\aclark\\\\Desktop\\\\SMU\\\\MSDS6210-Immersion_Project\\\\Study\\\\data\\\\brfss2012_2014.csv', encoding = \"ISO-8859-1\")\n",
     "# Andrew home\n",
-    "brfss = pd.read_csv('//Users//andrewclark//repos/MSDS6210-Immersion_Project//Study//data//brfss2012_2014.csv', encoding = \"ISO-8859-1\")\n",
+    "#brfss = pd.read_csv('//Users//andrewclark//repos/MSDS6210-Immersion_Project//Study//data//brfss2012_2014.csv', encoding = \"ISO-8859-1\")\n",
     "print(\"Starting length is %.f \" % len(brfss))\n",
     "\n",
     "# Age 18 to 64 - Excludes 65 or older, refused, or missing\n",
-    "brfss = brfss[brfss['_AGE65YR'] == 1] \n",
+    "brfss = brfss[brfss['_AGE65YR'] == 1].drop('_AGE65YR', axis=1)\n",
     "\n",
     "# Exclude blank, 'Don't know', 'Not Sure', or 'Refused'\n",
     "brfss = brfss[((brfss['GENHLTH'].notnull()) & (~brfss['GENHLTH'].isin([7,9])))] \n",
